--- a/iframe.html
+++ b/iframe.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
 <html>
 	<head>
+		<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 		<title>Drag and drop target iframe</title>
 		<script src="includes/jquery-1.7.2.js" type="text/javascript"></script>
 		<script src="includes/dragNDrop.js" type="text/javascript"></script>
